--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "package_downloader",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "cd lib; node index.js"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Akshayiyer12",
+  "license": "MIT"
 }
